Fixed z-index issues with columns and drawers

--- a/platform/plugins/Q/web/css/columns.css
+++ b/platform/plugins/Q/web/css/columns.css
@@ -108,3 +108,7 @@
 	right: 0; 
 	z-index: 9999; 
 }
+
+.column_slot {
+	z-index: 10;
+}
